style.css
header {
    background-color: #0d4355;
}

main {
    background-color: #0c5273;
}

footer {
    background-color: #0d4355;
}

input {
    font-size: 16px;
    border-radius: 10px;
}

.header-content {
    max-width: 1920px;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
}

.header-content img {
    width: 80px;
}

.main-content {
    max-width: 1920px;
    width: 100%;
    height: 100%;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.card-area {
    width: 100%;
    max-width: 1920px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

}

#loading-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;

    background: #0c5273;
    z-index: 9999;
}

#loading-overlay.hidden {
    display: none !important;
}

.spinner {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.spinner img {
    /* width: 300px; */
    height: 150px;
}

.card {
    width: 250px;
    height: 280px;
    margin: 20px;
    display: grid;
    grid-template-rows: 40px 200px 40px;
    border: 1px solid #0d4355;
    border-radius: 10px;
    box-shadow: 10px 10px 4px rgba(255, 255, 255, 0.4);
}

.card-body img {
    width: 200px;
    height: 200px;
    padding-bottom: 30px;
    object-position: center;
    filter: drop-shadow(20px 15px 4px rgba(0, 0, 0, 0.4));
}

.card :hover {
    cursor: pointer;
}

.card:focus {
    transform: scale(1.2);
}

.card-body:hover img {
    filter: drop-shadow(10px 10px 2px rgba(0, 0, 0, 0.4));
    transform: scale(1.2);
}

.card-header {
    height: 100%;
    display: flex;
    align-items: center;
    padding-left: 10px;
    background-color: #0d4355;
    color: white;
    align-items: center;
    border-radius: 10px 10px 0 0;
}

.card-body {
    height: 100%;
    display: flex;
    align-items: center;
}

.card-footer {
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 10px;
    background-color: #0d4355;
    color: white;
    border-radius: 0 0 10px 10px;
}

.card-footer img {
    width: 40px;
    height: 30px;
    padding-left: 10px;
}

.footer-content {
    max-width: 1920px;
    width: 100%;
    height: 100%;
    padding-left: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
}

.load {
    display: flex;
    justify-content: center;
}

.load-btn {
    width: 120px;
    height: 40px;
    background-color: #ff0201;
    color: #d9d9d9;
    border-radius: 20px;
}

.load-btn:hover,
.load-btn:focus {
    transform: scale(1.2)
}

.pokecard {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.4);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 3;
    opacity: 0;
    visibility: hidden;
    transition: all 0.4s ease-in-out;
}

.pokemon-details {
    width: 300px;
    height: 560px;
    border: 1px solid #d9d9d9;
    border-radius: 10px;
    color: #d9d9d9;
    transform: scale(0.2);
    /* Startet kleiner */
    transition: all 0.4s ease-in-out;
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
}

.pokecard.open {
    opacity: 1;
    visibility: visible;
}

.pokecard.open .pokemon-details {
    transform: scale(1);
}

.pokecard-header {
    width: 100%;
    height: 20px;
    background-color: #0d4355;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 5px;
    padding-right: 5px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.close-btn {
    cursor: pointer;
}

.pokecard-img {
    width: 100%;
    height: 150px;
}

.detail-img {
    display: flex;
    align-items: flex-start;
    justify-content: center;
}

.detail-img img {
    height: 150px;
    padding-bottom: 20px;
    object-position: center;
}

.pokecard-content {
    width: 100%;
    height: 100%;
    max-height: 370px;
    background-color: #0c5273;
    overflow-y: auto;
    scroll-behavior: contain;
}

.pokecard-footer {
    width: 100%;
    height: 20px;
    background-color: #0d4355;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.hidden {
    display: none !important;
}

.tabs {
    display: flex;
    justify-content: space-around;
    color: #d9d9d9;
}

.tab {
    color: #d9d9d9;
    font-size: 16px;
}

.stat-row {
    display: flex;
    flex-direction: column;
    margin: 10px;
}

.bar {
    width: 100%;
    height: 10px;
    background: #ccc;
    border-radius: 5px;
}

.fill {
    height: 100%;
    background: limegreen;
    border-radius: 5px;
}

.evo-timeline {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    overflow-x: auto;
    padding: 10px;
    gap: 10px;
}

.evo-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-width: 80px;
    position: relative;
}

.evo-card img {
    width: 60px;
    height: 60px;
    border-radius: 8px;
    background-color: #fff;
    padding: 4px;
}

.evo-card p {
    margin-top: 5px;
    font-size: 14px;
    text-align: center;
    color: #d9d9d9;
}

.evo-arrow {
    font-size: 24px;
    color: #d9d9d9;
    margin: 0 5px;
}

.type-icon {
    width: 100px;
    margin: 5px;
}

.overlay-nav {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: space-evenly;
}

.nav-btn {
    color: #d9d9d9;
    font-size: 16px;
}

#tab-types {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

@media (max-width: 634px) {
    .card {
        margin: 10px;
    }

    .header-content {
        height: 50px;
    }

    .header-content img {
        margin-top: 10px;
        width: 40px;
    }

    .logo h2 {
        font-size: 18px;
    }
}

@media (max-width: 594px) {
    .card {
        margin: 5px;
    }
}

